[gd_scene load_steps=3 format=3 uid="uid://c0kd6nsixg18j"]

[ext_resource type="Script" uid="uid://ddmx3e0le4ioa" path="res://scenes/start.gd" id="1_c7cgp"]
[ext_resource type="FontFile" uid="uid://c2km1ktr8iwsb" path="res://fonts/Marcellus/Marcellus-sc.regular.otf" id="2_u80x2"]

[node name="StartMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_c7cgp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u80x2")
theme_override_font_sizes/font_size = 31
text = "Map Test"

[node name="SceneMenu" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Pick Scene"
item_count = 2
popup/item_0/text = "seize_test"
popup/item_0/id = 0
popup/item_1/text = "killunit_test"
popup/item_1/id = 1

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
